app/assets/stylesheets/map/modules/m-pin-controls.scss
/* Controls */

.m-pin-controls {
	position:absolute;
  bottom:50px;
  right:50px;
}

.m-pin-controls .add-pin button {
  padding:20px;
  background:$lol-navy;
  border:0;
  border-radius: 100px;
  width:80px;
  height:80px;
  color:white;
  font-weight: bold;
  @include transition(all .2s);
  @include shadow;
}

.m-pin-controls .add-pin.adding button {
	padding: 20px 20px 20px 16px;
}

.m-pin-controls .zoom-controls button {
  display: block;
  float: right;
  clear: right;
  margin-right:10px;
  background:none;
  border-radius:100px;
  width:50px;
  height:50px;
  border:2px solid $lol-navy;
  color:$blue;
  padding:0;
  font-size:20px;
  margin-top:10px;
}

.m-pin-controls button:hover {
  background:darken($lol-navy, 20%);
}

